[package]
name = "tokio_utils"
version = "0.1.0"
authors = ["dollarkiller <dollarkiller@dollarkiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
tokio-test = "0.4.0"
